# ColorlessMemory

./: CMakeLists.txt  MainAllInOne.cpp  MainClient.cpp  MainServer.cpp  README.md  client.cpp  main_client.cpp  main_server.cpp  server.cpp  vcpkg.json
client/: packet.cpp  packetManager.cpp
client/include/: AssetManager.h  DeckIcon.h  Game.h  GameManager.h  PlayCard.h  PlayerUi.h
client/include/Gui/: Gui.h
client/include/Gui/Guis/: GameGui.h  LobbyGui.h  MenuGui.h
client/include/gui/: Gui.h  Text.h
client/include/gui/guis/: GameGui.h  LobbyGui.h  MenuGui.h
client/src/: AssetManager.cpp  DeckIcon.cpp  Game.cpp  GameManager.cpp  PlayCard.cpp  PlayerUi.cpp
client/src/Gui/: Button.cpp  Gui.cpp
client/src/Gui/Guis/: GameGui.cpp  LobbyGui.cpp  MenuGui.cpp
client/src/gui/: Button.cpp  Gui.cpp
client/src/gui/guis/: GameGui.cpp  LobbyGui.cpp  MenuGui.cpp
common/include/: Constants.h  DeckType.h  MyPackets.h  PlayerName.h  Random.h
common/include/MyPackets/: CardInformationPacket.h  ChangeDeckPacket.h  JoinLobbyPacket.h  LobbyInformationPacket.h  StartGamePacket.h  TurnPacket.h
common/src/: MyPackets.cpp  PlayerName.cpp  Random.cpp
include/: AssetManager.h  Game.h  NetworkClientManager.h  NetworkServerManager.h  Packet.h  PacketManager.h  Random.h  asset_manager.h  client.h  client_manager.h  game.h  message.h  network_client_manager.h  network_server_manager.h  packet.h  packetManager.h  packet_manager.h  server.h
include/gui/: Button.h  Gui.h  button.h  gui.h  text.h
include/gui/guis/: LobbyGui.h  MenuGui.h  menu_gui.h
network/client/include/: Client.h  NetworkClientManager.h
network/client/src/: NetworkClientManager.cpp
network/common/include/: Packet.h  PacketManager.h
network/common/src/: Packet.cpp  PacketManager.cpp
network/include/: Client.h  NetworkClientManager.h  Packet.h
network/server/include/: ClientId.h  ClientManager.h  NetworkServerManager.h  ServerNetworkInterface.h
network/server/src/: ClientManager.cpp  NetworkServerManager.cpp
network/src/: NetworkClientManager.cpp  NetworkServerManager.cpp  Packet.cpp
server/include/: ClientId.h  GameServer.h  NetworkServerManager.h  ServerData.h
server/src/: GameServer.cpp  NetworkServerManager.cpp  ServerData.cpp
src/: AssetManager.cpp  ClientManager.cpp  Game.cpp  NetworkClientManager.cpp  NetworkServerManager.cpp  Packet.cpp  PacketManager.cpp  asset_manager.cpp  clientManager.cpp  client_manager.cpp  game.cpp  message.cpp  network_client_manager.cpp  network_server_manager.cpp  packet.cpp  packet_manager.cpp  server.cpp
src/gui/: Button.cpp  Gui.cpp  Text.cpp  button.cpp  gui.cpp  text.cpp
src/gui/guis/: LobbyGui.cpp  menu_gui.cpp
tests/: TestGame.cpp  TestPacket.cpp
